--- a/macosx/plugins/DFXVideo/NetSfPeopsSoftGPUInterface.xib
+++ b/macosx/plugins/DFXVideo/NetSfPeopsSoftGPUInterface.xib
@@ -7,8 +7,7 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="NetSfPeopsSoftGPUPluginWindowController">
             <connections>
-                <outlet property="glView" destination="15" id="16"/>
-                <outlet property="outputTextView" destination="wRA-10-3ia" id="H7W-Gy-exm"/>
+                <outlet property="glView" destination="5A7-zE-VOh" id="9ke-zk-yXJ"/>
                 <outlet property="window" destination="5" id="8"/>
             </connections>
         </customObject>
@@ -23,49 +22,16 @@
                 <rect key="frame" x="0.0" y="0.0" width="640" height="480"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <openGLView wantsLayer="YES" colorSize="8bit_RGB" useAuxiliaryDepthBufferStencil="NO" translatesAutoresizingMaskIntoConstraints="NO" id="15" customClass="NetSfPeopsSoftGPUPluginGLView">
+                    <customView wantsLayer="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5A7-zE-VOh">
                         <rect key="frame" x="0.0" y="0.0" width="640" height="480"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                    </openGLView>
-                    <textField wantsLayer="YES" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="wRA-10-3ia">
-                        <rect key="frame" x="418" y="416" width="204" height="44"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="200" id="LcC-n1-itB"/>
-                        </constraints>
-                        <shadow key="shadow" blurRadius="2">
-                            <color key="color" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
-                        </shadow>
-                        <animations>
-                            <caTransition key="subviews">
-                                <mutableData key="keyedArchiveRepresentation">
-YnBsaXN0MDDUAQIDBAUGICFYJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoKcHCA8Q
-CRUbVSRudWxs0wkKCwwNDlR0eXBlViRjbGFzc18QEl9fQ0FDb2RpbmdDb250ZW50c4ACgAaAA1RmYWRl
-0hEKEhRaTlMub2JqZWN0c6ETgASABdIWFxgZWiRjbGFzc25hbWVYJGNsYXNzZXNXTlNBcnJheaIYGlhO
-U09iamVjdNIWFxwdXENBVHJhbnNpdGlvbqMeHxpcQ0FUcmFuc2l0aW9uW0NBQW5pbWF0aW9uXxAPTlNL
-ZXllZEFyY2hpdmVy0SIjVHJvb3SAAQAIABEAGgAjAC0AMgA3AD8ARQBMAFEAWABtAG8AcQBzAHgAfQCI
-AIoAjACOAJMAngCnAK8AsgC7AMAAzQDRAN4A6gD8AP8BBAAAAAAAAAIBAAAAAAAAACQAAAAAAAAAAAAA
-AAAAAAEGA
-</mutableData>
-                            </caTransition>
-                        </animations>
-                        <textFieldCell key="cell" lineBreakMode="truncatingTail" allowsUndo="NO" sendsActionOnEndEditing="YES" alignment="right" title="Label" id="Kp1-gr-O89">
-                            <font key="font" metaFont="system" size="36"/>
-                            <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
-                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                        </textFieldCell>
-                        <connections>
-                            <binding destination="-2" name="value" keyPath="self.outputString" id="RaA-Gc-KHl"/>
-                        </connections>
-                    </textField>
+                    </customView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="15" firstAttribute="centerX" secondItem="6" secondAttribute="centerX" id="18"/>
-                    <constraint firstAttribute="bottom" secondItem="15" secondAttribute="bottom" id="19"/>
-                    <constraint firstItem="15" firstAttribute="leading" secondItem="6" secondAttribute="leading" id="20"/>
-                    <constraint firstItem="15" firstAttribute="top" secondItem="6" secondAttribute="top" id="21"/>
-                    <constraint firstAttribute="trailing" secondItem="wRA-10-3ia" secondAttribute="trailing" constant="20" symbolic="YES" id="PzZ-uk-mgM"/>
-                    <constraint firstItem="wRA-10-3ia" firstAttribute="top" secondItem="6" secondAttribute="top" constant="20" symbolic="YES" id="aaC-Pp-bfi"/>
+                    <constraint firstAttribute="bottom" secondItem="5A7-zE-VOh" secondAttribute="bottom" id="F86-Ap-daw"/>
+                    <constraint firstAttribute="trailing" secondItem="5A7-zE-VOh" secondAttribute="trailing" id="WSv-v5-jUL"/>
+                    <constraint firstItem="5A7-zE-VOh" firstAttribute="leading" secondItem="6" secondAttribute="leading" id="Zkv-hy-lzU"/>
+                    <constraint firstItem="5A7-zE-VOh" firstAttribute="top" secondItem="6" secondAttribute="top" id="kak-e0-f2d"/>
                 </constraints>
             </view>
             <connections>
