--- a/macosx/plugins/DFXVideo/NetSfPeopsSoftGPUInterface.xib
+++ b/macosx/plugins/DFXVideo/NetSfPeopsSoftGPUInterface.xib
@@ -7,7 +7,7 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="NetSfPeopsSoftGPUPluginWindowController">
             <connections>
-                <outlet property="glView" destination="5A7-zE-VOh" id="9ke-zk-yXJ"/>
+                <outlet property="glView" destination="15" id="16"/>
                 <outlet property="window" destination="5" id="8"/>
             </connections>
         </customObject>
@@ -18,20 +18,20 @@
             <rect key="contentRect" x="6" y="240" width="640" height="480"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1920" height="1058"/>
             <value key="minSize" type="size" width="640" height="480"/>
-            <view key="contentView" wantsLayer="YES" id="6">
+            <view key="contentView" id="6">
                 <rect key="frame" x="0.0" y="0.0" width="640" height="480"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <customView wantsLayer="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5A7-zE-VOh">
+                    <openGLView colorSize="8bit_RGB" useAuxiliaryDepthBufferStencil="NO" translatesAutoresizingMaskIntoConstraints="NO" id="15" customClass="NetSfPeopsSoftGPUPluginGLView">
                         <rect key="frame" x="0.0" y="0.0" width="640" height="480"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    </customView>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                    </openGLView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="5A7-zE-VOh" secondAttribute="bottom" id="F86-Ap-daw"/>
-                    <constraint firstAttribute="trailing" secondItem="5A7-zE-VOh" secondAttribute="trailing" id="WSv-v5-jUL"/>
-                    <constraint firstItem="5A7-zE-VOh" firstAttribute="leading" secondItem="6" secondAttribute="leading" id="Zkv-hy-lzU"/>
-                    <constraint firstItem="5A7-zE-VOh" firstAttribute="top" secondItem="6" secondAttribute="top" id="kak-e0-f2d"/>
+                    <constraint firstItem="15" firstAttribute="centerX" secondItem="6" secondAttribute="centerX" id="18"/>
+                    <constraint firstAttribute="bottom" secondItem="15" secondAttribute="bottom" id="19"/>
+                    <constraint firstItem="15" firstAttribute="leading" secondItem="6" secondAttribute="leading" id="20"/>
+                    <constraint firstItem="15" firstAttribute="top" secondItem="6" secondAttribute="top" id="21"/>
                 </constraints>
             </view>
             <connections>
