--- a/macosx/Resources/Base.lproj/CheatWindow.xib
+++ b/macosx/Resources/Base.lproj/CheatWindow.xib
@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="15705" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="7702"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="15705"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="CheatController">
@@ -17,16 +18,16 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <window title="Cheats" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="documentWindow" id="1">
+        <window title="Cheats" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="documentWindow" id="1">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <rect key="contentRect" x="196" y="153" width="698" height="357"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="1920" height="1057"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="1440" height="877"/>
             <view key="contentView" id="2">
                 <rect key="frame" x="0.0" y="0.0" width="698" height="357"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="4">
-                        <rect key="frame" x="146" y="13" width="132" height="32"/>
+                        <rect key="frame" x="141" y="13" width="126" height="32"/>
                         <buttonCell key="cell" type="push" title="Save Cheats…" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="5">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
@@ -36,7 +37,7 @@
                         </connections>
                     </button>
                     <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="6">
-                        <rect key="frame" x="14" y="13" width="132" height="32"/>
+                        <rect key="frame" x="14" y="13" width="127" height="32"/>
                         <buttonCell key="cell" type="push" title="Load Cheats…" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="7">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
@@ -48,11 +49,11 @@
                     <scrollView autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="23">
                         <rect key="frame" x="20" y="61" width="658" height="276"/>
                         <clipView key="contentView" id="6pF-og-es3">
-                            <rect key="frame" x="1" y="17" width="656" height="258"/>
+                            <rect key="frame" x="1" y="0.0" width="656" height="275"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" columnReordering="NO" multipleSelection="NO" autosaveColumns="NO" typeSelect="NO" headerView="27" id="26">
-                                    <rect key="frame" x="0.0" y="0.0" width="656" height="19"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="656" height="258"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <size key="intercellSpacing" width="3" height="2"/>
                                     <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -109,13 +110,12 @@
                                     </connections>
                                 </tableView>
                             </subviews>
-                            <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                         </clipView>
-                        <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="25">
+                        <scroller key="horizontalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="25">
                             <rect key="frame" x="1" y="249" width="607" height="15"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
-                        <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="24">
+                        <scroller key="verticalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="24">
                             <rect key="frame" x="224" y="17" width="15" height="102"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
@@ -125,7 +125,7 @@
                         </tableHeaderView>
                     </scrollView>
                     <button toolTip="Clear all cheats" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="78">
-                        <rect key="frame" x="542" y="13" width="76" height="32"/>
+                        <rect key="frame" x="543" y="13" width="75" height="32"/>
                         <buttonCell key="cell" type="push" title="Clear" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="79">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
@@ -135,7 +135,7 @@
                         </connections>
                     </button>
                     <button toolTip="Apply Cheats" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="256">
-                        <rect key="frame" x="466" y="13" width="76" height="32"/>
+                        <rect key="frame" x="468" y="13" width="75" height="32"/>
                         <buttonCell key="cell" type="push" title="Apply" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="257">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
@@ -197,6 +197,7 @@
                     <constraint firstItem="23" firstAttribute="leading" secondItem="2" secondAttribute="leading" constant="20" symbolic="YES" id="JRi-3E-R7a"/>
                     <constraint firstItem="xfd-rR-U91" firstAttribute="leading" secondItem="78" secondAttribute="trailing" constant="8" symbolic="YES" id="MoZ-yc-FFe"/>
                     <constraint firstItem="DBF-Fx-sqP" firstAttribute="baseline" secondItem="ORW-Vw-Xqo" secondAttribute="baseline" id="O2e-SZ-KXh"/>
+                    <constraint firstItem="256" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="4" secondAttribute="trailing" constant="12" symbolic="YES" id="RVG-zD-2mj"/>
                     <constraint firstItem="6" firstAttribute="leading" secondItem="2" secondAttribute="leading" constant="20" symbolic="YES" id="U1b-J8-Mn7"/>
                     <constraint firstItem="23" firstAttribute="top" secondItem="2" secondAttribute="top" constant="20" symbolic="YES" id="Uzz-Lw-v8y"/>
                     <constraint firstItem="ORW-Vw-Xqo" firstAttribute="leading" secondItem="DBF-Fx-sqP" secondAttribute="trailing" constant="-1" id="d7V-sk-LYe"/>
@@ -213,12 +214,13 @@
             <connections>
                 <outlet property="delegate" destination="-2" id="108"/>
             </connections>
+            <point key="canvasLocation" x="139" y="557"/>
         </window>
-        <window title="Edit Cheat" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" animationBehavior="default" id="134">
+        <window title="Edit Cheat" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="default" id="134">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="196" y="207" width="342" height="265"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="1920" height="1057"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="1440" height="877"/>
             <view key="contentView" id="135">
                 <rect key="frame" x="0.0" y="0.0" width="342" height="265"/>
                 <autoresizingMask key="autoresizingMask"/>
@@ -226,11 +228,11 @@
                     <scrollView autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="136">
                         <rect key="frame" x="20" y="53" width="302" height="192"/>
                         <clipView key="contentView" id="COc-Cf-C5K">
-                            <rect key="frame" x="1" y="17" width="300" height="174"/>
+                            <rect key="frame" x="1" y="0.0" width="300" height="191"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" headerView="139" id="137">
-                                    <rect key="frame" x="0.0" y="0.0" width="300" height="19"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="300" height="174"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <size key="intercellSpacing" width="3" height="2"/>
                                     <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -288,13 +290,12 @@
                                     </connections>
                                 </tableView>
                             </subviews>
-                            <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                         </clipView>
-                        <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="138">
+                        <scroller key="horizontalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="138">
                             <rect key="frame" x="1" y="120" width="143" height="16"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
-                        <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="140">
+                        <scroller key="verticalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="140">
                             <rect key="frame" x="224" y="17" width="15" height="102"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
@@ -304,7 +305,7 @@
                         </tableHeaderView>
                     </scrollView>
                     <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="152">
-                        <rect key="frame" x="245" y="13" width="83" height="32"/>
+                        <rect key="frame" x="246" y="13" width="82" height="32"/>
                         <buttonCell key="cell" type="push" title="OK" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="153">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
@@ -317,7 +318,7 @@ DQ
                         </connections>
                     </button>
                     <button verticalHuggingPriority="750" tag="1" translatesAutoresizingMaskIntoConstraints="NO" id="156">
-                        <rect key="frame" x="162" y="13" width="83" height="32"/>
+                        <rect key="frame" x="164" y="13" width="82" height="32"/>
                         <buttonCell key="cell" type="push" title="Cancel" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="157">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
@@ -368,6 +369,7 @@ Gw
                     <constraint firstItem="175" firstAttribute="leading" secondItem="135" secondAttribute="leading" constant="20" symbolic="YES" id="193"/>
                     <constraint firstItem="175" firstAttribute="top" secondItem="179" secondAttribute="top" id="203"/>
                     <constraint firstItem="179" firstAttribute="leading" secondItem="175" secondAttribute="trailing" constant="-1" id="236"/>
+                    <constraint firstItem="156" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="179" secondAttribute="trailing" constant="8" symbolic="YES" id="8PA-la-asD"/>
                     <constraint firstItem="175" firstAttribute="bottom" secondItem="156" secondAttribute="bottom" id="BiT-cB-72z"/>
                     <constraint firstItem="179" firstAttribute="top" secondItem="136" secondAttribute="bottom" constant="8" symbolic="YES" id="Ehy-91-5kl"/>
                     <constraint firstItem="152" firstAttribute="baseline" secondItem="156" secondAttribute="baseline" id="G4C-ss-lMH"/>
@@ -375,6 +377,7 @@ Gw
                     <constraint firstItem="152" firstAttribute="width" secondItem="156" secondAttribute="width" id="mdz-o3-9Ep"/>
                 </constraints>
             </view>
+            <point key="canvasLocation" x="139" y="148"/>
         </window>
         <arrayController objectClassName="NSMutableArray" avoidsEmptySelection="NO" id="219" userLabel="Cheat Values">
             <declaredKeys>
