--- a/macosx/plugins/GCInput/Resources/Base.lproj/NetPcsxrGCInputPluginMain.xib
+++ b/macosx/plugins/GCInput/Resources/Base.lproj/NetPcsxrGCInputPluginMain.xib
@@ -195,7 +195,7 @@ Gw
                     <rect key="frame" x="20" y="42" width="383" height="283"/>
                     <clipView key="contentView" id="xit-lf-WfZ">
                         <rect key="frame" x="1" y="0.0" width="366" height="282"/>
-                        <autoresizingMask key="autoresizingMask"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView verticalHuggingPriority="750" tag="1" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" columnReordering="NO" multipleSelection="NO" autosaveColumns="NO" rowHeight="14" headerView="212" id="123">
                                 <rect key="frame" x="0.0" y="0.0" width="366" height="265"/>
